# sf-docs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  project-plan.md
.cursor/rules/: project-context.mdc  rust-conventions.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-19-code-review-refactor.md  2026-03-19-comprehensive-test-suite.md  2026-03-25-phase-28-sfdoc-update.md  2026-03-25-phases-25-27-implementation.md
docs/superpowers/specs/: 2026-03-25-phase-28-sfdoc-update-design.md  2026-03-25-phases-25-27-design.md
src/: apex_common.rs  aura_parser.rs  aura_prompt.rs  cache.rs  cli.rs  config.rs  custom_metadata_parser.rs  doc_client.rs  error.rs  flexipage_parser.rs  flexipage_prompt.rs  flow_parser.rs  flow_prompt.rs  gemini.rs  generate.rs  html_renderer.rs  lib.rs  lwc_parser.rs  lwc_prompt.rs  main.rs  object_parser.rs  object_prompt.rs  openai_compat.rs  parser.rs  prompt.rs  prompts.rs  providers.rs  rate_limit.rs  renderer.rs  retry.rs  scanner.rs  trigger_parser.rs  trigger_prompt.rs  types.rs  update.rs  validation_rule_parser.rs  validation_rule_prompt.rs
tests/: integration.rs
tests/fixtures/aura/myAuraComp/: myAuraComp.cmp
tests/fixtures/classes/: AccountService.cls
tests/fixtures/customMetadata/: Integration_Settings__mdt.Default.md-meta.xml
tests/fixtures/flexipages/: Account_Record_Page.flexipage-meta.xml
tests/fixtures/flows/: Account_Onboarding.flow-meta.xml
tests/fixtures/triggers/: AccountTrigger.trigger
(+7 files in other folders)
