[package]
name = "sfdoc"
version = "0.1.0"
edition = "2021"
description = "Generate wiki-style Markdown documentation for Salesforce Apex classes using the Gemini API"

[[bin]]
name = "sfdoc"
path = "src/main.rs"

[lib]
name = "sfdoc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
indicatif = "0.17"
anyhow = "1"
regex = "1"
sha2 = "0.10"
rpassword = "7"
keyring = "2"
quick-xml = "0.36"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
