[package]
name = "sfdoc"
version = "0.1.0"
edition = "2021"
description = "Generate wiki-style documentation for Salesforce metadata (Apex, Flows, LWC, Aura, Objects, and more) using AI"

[[bin]]
name = "sfdoc"
path = "src/main.rs"

[lib]
name = "sfdoc"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
indicatif = "0.17"
anyhow = "1"
async-trait = "0.1"
regex = "1"
sha2 = "0.10"
rpassword = "7"
rand = "0.8"
keyring = "2"
quick-xml = "0.36"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
tokio = { version = "1", features = ["test-util"] }
